# Test-task

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  payment_service.py  pyproject.toml
app/: main.py
app/api/routes/: payments.py
app/domain/: providers.py  tariffs.py
app/schemas/: payment.py
app/services/: payment_service.py
tests/: conftest.py  test_api_payments.py  test_domain_providers.py  test_domain_tariffs.py  test_payment_gateway.py  test_schemas.py  test_services_payment.py
